2009-03-02  Alexander Larsson  <alexl@redhat.com>

	Bug 569712 – Write comments for translators!

	* common/gvfsdnssdresolver.c (service_resolver_timed_out):
	Fix position of translator comments.

2009-03-02  Alexander Larsson  <alexl@redhat.com>

	Bug 545025 – gvfs doesnt use hal storage.icon.drive/volume properties

        * monitor/hal/ghaldrive.c:
        * monitor/hal/ghalmount.c:
	Use storage.icon.drive and storage.icon.volume, not
	info.desktop.icon as per the spec.

	Patch from Karl Relton

2009-03-02  Alexander Larsson  <alexl@redhat.com>

	Bug 565041 – burn: Doesn't support move

        * daemon/gvfsbackendburn.c:
	Implement try_move based on patch from Fabio Bonelli.

2009-03-02  Alexander Larsson  <alexl@redhat.com>

        Bug 569066 – gvfs' configure.ac uses non posix 'test' constructions

        * configure.ac:
	Use '=', not '==' for comparison
	Patch from Alexis Ballier

2009-03-02  Alexander Larsson  <alexl@redhat.com>

	Bug 564003 – gvfs Cygwin patches

        * daemon/gvfsbackendsftp.c:
	Include <sys/time.h> for struct timeval on cygwin

2009-03-02  Alexander Larsson  <alexl@redhat.com>

        Bug 569203 – gvfsd-sftp crashed with SIGSEGV in strlen()

        * daemon/gvfsbackendsftp.c:
        Workaround crash, spew a warning to try to get information about this crash.

2009-03-02  Alexander Larsson  <alexl@redhat.com>

	Bug 569712 – Write comments for translators!

        * common/gvfsdnssdresolver.c:
        Add some translator comments.
	Patch from David Planella

2009-03-02  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendsmb.c:
	Implement query_info on smb streams

2009-03-02  Alexander Larsson  <alexl@redhat.com>

	Bug 573371 – Unsafe g_htonl() macro expansion

	* client/gdaemonfileoutputstream.c (append_request):
	* client/gdaemonfileinputstream.c (append_request):
	Don't use ++ inside macro that may evaluate twice.

2009-03-02  Alexander Larsson  <alexl@redhat.com>

        * common/gdbusutils.[ch]: