@@ -1,5 +1,13 @@
 2009-03-02  Alexander Larsson  <alexl@redhat.com>
 
+	Bug 550929 – nautilus sftp:// doesn't read User in ~/.ssh/config
+
+        * daemon/gvfsbackendsftp.c:
+	Don't specify user unless requested explicitly by the uri.
+	Patch from Christian Neumair
+
+2009-03-02  Alexander Larsson  <alexl@redhat.com>
+
 	Bug 569712 – Write comments for translators!
 
 	* common/gvfsdnssdresolver.c (service_resolver_timed_out):
